# unsure

./: .pylintrc  LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst  modules.rst  tests.rst  unsure.rst
notebooks/: Testing CUE-based update.ipynb  dev.ipynb
tests/: test_unsure.py
unsure/: __init__.py  boe.py
