[tool.poetry]
name = "unsure"
version = "0.2.0"
description = ""
authors = ["Vasanth Sarathy <vsarathy@sift.net>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
pandas = "^1.4.2"
jupyter = "^1.0.0"
ipykernel = "^6.13.0"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "^6.3.2"
mypy = "^0.950"
pre-commit = "^2.18.1"
black = {extras = ["jupyter"], version = "^22.3.0"}
Sphinx = "^4.5.0"
sphinx-book-theme = "^0.3.2"
pynvim = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
